D31_shadow-cron/challenge/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: d31-shadow-cron
  labels:
    app: d31-shadow-cron
    challenge-id: d31
spec:
  type: ClusterIP
  selector:
    app: d31-shadow-cron
  ports:
    - name: ssh
      port: 22
      targetPort: 22
      protocol: TCP
